Mobile menu updates

--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -30,21 +30,32 @@
         position: fixed;
         top: 54px;
         left: 0;
-        right: 0;
+        width: calc(100% - 2rem);
         height: calc(100vh - 54px);
         background-color: #fff;
         z-index: 2000;
-        transform: translate3d(-100%, 0, 0);
+        //transform: translate3d(-100%, 0, 0);
         transition: $transition;
+        box-shadow: $box-shadow;
 
         .main-menu {
             display: flex;
             flex-direction: column;
+            padding-left: 1rem;
 
             li {
                 display: inline-block;
+                border-bottom: 2px solid $borderGrey;
+                position: relative;
+
+                svg {
+                    @include v-c;
+                    right: 1rem;
+                }
+
                 a {
-                    color: $body-color !important;
+                    color: $body-color;
+                    padding: 1rem 0;
                 }
             }
         }
@@ -59,6 +70,12 @@
 
         @include media-breakpoint-up(lg) {
             flex-direction: row;
+
+            li {
+                a {
+                    color: $white;
+                }
+            }
         }
 
         li {
@@ -73,19 +90,24 @@
                 height: 100%;
                 display: flex;
                 align-items: center;
-                color: $white;
-                font-size: 1.3em;
-                padding: 30px 15px;
-                line-height: 1;
+
                 transition: $transition;
 
                 &.active {
                     background-color: darken($turq, 5%);
+                    color: #fff;
                 }
 
                 &:hover {
                     background-color: darken($turq, 5%);
                     text-decoration: none;
+                    color: #fff;
+                }
+
+                @include media-breakpoint-up(lg) {
+                    @include font-size(1.3rem);
+                    padding: 30px 15px;
+                    line-height: 1;
                 }
             }
         }
@@ -126,20 +148,3 @@
 .main-nav .submenu li a {
     padding: 0;
 }
-
-
-//OVERWRITE BOOTSTRAP
-.btn-lg, .btn-group-lg > .btn {
-
-    line-height: 2 !important;
-
-}
-
-//select, input{
-//  width: 300px;
-//  height: 30px;
-//  border-radius: 7px;
-//}
-
-
-
