--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header-wrapper {
     background: $turq;
     text-align: center;
-    @include media-breakpoint-down(md){
+    @include media-breakpoint-down(md) {
         padding: 10px 0;
     }
 }
@@ -18,6 +18,7 @@
 
     a {
         display: flex;
+
         &:hover {
             text-decoration: none;
         }
@@ -34,7 +35,7 @@
         height: calc(100vh - 54px);
         background-color: #fff;
         z-index: 2000;
-        //transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
         transition: $transition;
         box-shadow: $box-shadow;
 
@@ -68,23 +69,10 @@
     .main-menu {
         margin: 0;
 
-        @include media-breakpoint-up(lg) {
-            flex-direction: row;
-
-            li {
-                a {
-                    color: $white;
-                }
-            }
-        }
-
         li {
             position: relative;
             display: inline-block;
 
-            &:last-child {
-                margin-right: -15px;
-            }
 
             > a {
                 height: 100%;
@@ -96,15 +84,37 @@
                 &.active {
                     background-color: darken($turq, 5%);
                     color: #fff;
+
+                    svg {
+                        path {
+                            fill: #fff;
+                        }
+                    }
+                }
+            }
+
+            &:hover {
+                svg {
+                    path {
+                        fill: #fff;
+                    }
                 }
 
-                &:hover {
+                a {
                     background-color: darken($turq, 5%);
                     text-decoration: none;
                     color: #fff;
                 }
+            }
+        }
 
-                @include media-breakpoint-up(lg) {
+        @include media-breakpoint-up(lg) {
+            li {
+                &:last-child {
+                    margin-right: -15px;
+                }
+
+                a {
                     @include font-size(1.3rem);
                     padding: 30px 15px;
                     line-height: 1;
