--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -118,6 +118,8 @@
                     @include font-size(1.3rem);
                     padding: 30px 15px;
                     line-height: 1;
+                    color: #fff;
+
                 }
             }
         }
