--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -116,7 +116,6 @@
         width: $fullWidth;
         background-color: $white;
         padding-top: 23px;
-        display: none;
 
         .dropdown-toggle {
             @include font-size(14);
@@ -479,20 +478,6 @@
         width: 100%;
     }
 
-    .nhs-hospital {
-        //border-bottom: solid 30px $darkBlue;
-        //border-right: solid 30px $darkBlue;
-        //border-left: solid 30px transparent;
-        //border-top: solid 30px transparent;
-    }
-
-    .private-hospital {
-        //border-bottom: solid 30px $hotpink;
-        //border-right: solid 30px $hotpink;
-        //border-left: solid 30px transparent;
-        //border-top: solid 30px transparent;
-    }
-
     .nhs-hospital,
     .private-hospital {
         text-align: center;
@@ -517,11 +502,6 @@
         border-radius: 3px 3px 0 0;
         transition: 0.3s all ease;
 
-        //&:before {
-        //    content: 'More info' !important;
-        //    @include v-c;
-        //}
-
         svg {
             transition: 0.1s all ease;
         }
@@ -531,14 +511,6 @@
             background: linear-gradient(90deg, #000, #000, #00bcb4, #000);
             background-size: 300% 100%;
 
-            //&:before {
-            //    content: 'Close info' !important;
-            //}
-
-            //&:after {
-            //    content: 'Close info';
-            //}
-
             i, svg {
                 transform: translateY(-50%) rotate3d(0, 0, 1, 45deg) !important;
 
@@ -547,11 +519,7 @@
     }
 }
 
-.js-is-sticky {
-    //padding-top: 85.6px;
-}
-
-
+// Compare buttons when compareCount = 5
 .compare {
     &.disabled {
         opacity: 0.3;
@@ -650,15 +618,18 @@
         pointer-events: none;
     }
 
-    &.results-page-mobile {
-        .filter-parent {
-            height: 70vh;
-            overflow: scroll;
-        }
-    }
 }
 
-/********* Mobile results layout ************/
+/********* Desktop results layout *************************************************************************************/
+/********* Desktop results layout *************************************************************************************/
+.results-page-desktop {
+    .filter-parent {
+        display: none;
+    }
+}
+/********* Mobile results layout *************************************************************************************/
+/********* Mobile results layout *************************************************************************************/
+
 .results-page-mobile {
     .row {
         @include reset-row-spacing(0.5rem);
@@ -670,6 +641,29 @@
             width: 20px;
             height: 20px;
             left: 16px;
+        }
+    }
+
+    .filter-parent {
+        transform: translate3d(-100%, 0, 0);
+        overflow: scroll;
+        position: fixed;
+        top: 54px;
+        left: 0;
+        width: 100%;
+        height: calc(100vh - 54px);
+        background-color: #fff;
+        z-index: 2000;
+        transition: $transition;
+    }
+
+    &.filters-open {
+        .filter-parent {
+            transform: translate3d(0, 0, 0);
+        }
+
+        .compare-hospitals-bar {
+            max-height: 0;
         }
     }
 
