--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -494,27 +494,21 @@
     }
 }
 
-.hospital-details {
-    .btn-more-info {
-        width: 92px;
-        height: 23px;
-        line-height: 23px;
-        border-radius: 3px 3px 0 0;
-        transition: 0.3s all ease;
+.btn-more-info {
 
-        svg {
-            transition: 0.1s all ease;
-        }
+    transition: 0.3s all ease;
 
-        &.open {
-            color: $white;
-            background: linear-gradient(90deg, #000, #000, #00bcb4, #000);
-            background-size: 300% 100%;
+    svg {
+        transition: 0.1s all ease;
+    }
 
-            i, svg {
-                transform: translateY(-50%) rotate3d(0, 0, 1, 45deg) !important;
+    &.open {
+        color: $white;
+        background-color: #000 !important;
 
-            }
+        i, svg {
+            transform: translateY(-50%) rotate3d(0, 0, 1, 45deg) !important;
+
         }
     }
 }
@@ -626,10 +620,17 @@
     .filter-parent {
         display: none;
     }
-}
-/********* Mobile results layout *************************************************************************************/
-/********* Mobile results layout *************************************************************************************/
 
+    .btn-more-info {
+        width: 92px;
+        height: 23px;
+        line-height: 23px;
+        border-radius: 3px 3px 0 0;
+    }
+}
+
+/********* Mobile results layout *************************************************************************************/
+/********* Mobile results layout *************************************************************************************/
 .results-page-mobile {
     .row {
         @include reset-row-spacing(0.5rem);
@@ -645,6 +646,7 @@
     }
 
     .filter-parent {
+        padding-top: 1rem;
         transform: translate3d(-100%, 0, 0);
         overflow: scroll;
         position: fixed;
