--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -733,6 +733,13 @@
             svg {
                 right: 0;
             }
+
+            label {
+                svg {
+                    @extend .help-link;
+                    @extend .help-link__inline;
+                }
+            }
         }
 
         .dropdown-toggle {
