--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -603,3 +603,9 @@ h6 {
         width: 100%;
     }
 }
+
+// Tooltip trigger on mobile
+.more-info-please {
+    width: 10px;
+    height: 10px;
+}
