--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -237,3 +237,6 @@ $card-spacer-x:                     1.25rem !default;
 //$card-columns-count:                3 !default;
 //$card-columns-gap:                  1.25rem !default;
 //$card-columns-margin:               $card-spacer-y !default;
+
+// Header
+$mobile-header-height: 54px;
