--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -632,7 +632,7 @@
 
     .filter-parent {
         padding-top: 1rem;
-        //transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
         overflow: scroll;
         position: fixed;
         top: 54px;
@@ -750,7 +750,6 @@
             @extend .pl-0;
             @extend .pt-0;
             @extend .pb-2;
-            //background-color: red;
         }
 
         .dropdown-menu {
