Fix 'click for prices' buttons.

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -443,6 +443,15 @@
     // Button on the floating green bar
 }
 
+.btn-enquiry {
+    svg {
+        width: 15px;
+        height: 15px;
+        position: static !important;
+        margin: 0 8px;
+    }
+}
+
 // Back to top button
 .btn-back-to-top {
     color: $white;
