--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -412,7 +412,7 @@
         span {
             @include font-size(14);
             display: inline-block;
-            margin-top: 10px;
+            //margin-top: 10px;
             line-height: 1;
             width: 100%; // IE bug
         }
@@ -642,6 +642,12 @@
         background-color: #fff;
         z-index: 2000;
         transition: $transition;
+    }
+
+    .result-item-mobile-section-2 {
+        * {
+            @extend .font-12;
+        }
     }
 
     // Make the dropdown expand rather than overlay
