--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,6 +56,7 @@
 @import 'components/logo';
 @import 'components/pagination';
 @import 'components/solutions';
+@import 'mobile/components/solutionsMobile';
 @import 'components/form';
 @import 'components/accordion';
 @import 'components/doctor';
