Mobile results bg

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -58,7 +58,7 @@ $greylight: #F6F6F6;
 $greylightbg: #F7F7F7;
 $lightGrey: $darkestWhite;
 $lighterGrey: #ececec;
-$lightestGrey: #1b1b1b;
+//$lightestGrey: #1b1b1b;
 $darkerGrey: #1c1c1c;
 $darkestGrey: #707070;
 
@@ -81,7 +81,7 @@ $greyBorder: 1px solid $borderGrey;
 
 // Body
 $body-bg: #fff;
-$body-color: $lightestGrey;
+$body-color: #1b1b1b;
 
 // Full width
 $fullWidth: 100%;
