--- a/resources/sass/components/_pagination.scss
+++ b/resources/sass/components/_pagination.scss
@@ -18,6 +18,21 @@
     .mobile-current-page {
         @include font-size(20);
     }
+
+    .pagination-arrow {
+        height: 30px;
+        width: 15px;
+
+        path {
+            fill: $grey;
+        }
+    }
+
+    .disabled {
+        path {
+            fill: $lighterGrey;
+        }
+    }
 }
 
 .pagination {
