--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -36,7 +36,7 @@
 
 //======================= Home faqs =======================
 .faqs-section {
-    .accordion {
+    .hc-faqs-accordion {
         .card {
             @include media-breakpoint-down(md) {
                 padding-top: 110px;
