--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -1,6 +1,6 @@
 .results-page {
     .corporate-content {
-        display: none;
+        //display: none;
     }
 }
 
@@ -9,7 +9,6 @@
 
     .corporate-content-inner {
         background-color: #fff;
-        padding: 1rem;
         @include media-breakpoint-up(lg) {
             padding: 30px;
         }
