--- a/resources/sass/components/_accordion.scss
+++ b/resources/sass/components/_accordion.scss
@@ -9,6 +9,73 @@
         @extend .border-right-0;
         @extend .border-left-0;
         @extend .border-bottom;
+
+        @extend .mb-2;
+        @extend .bg-white;
+        @include media-breakpoint-up(lg) {
+            padding: 2rem;
+        }
+    }
+
+    .card-header {
+        padding: 0;
+        position: relative;
+        background-color: #fff;
+        @extend .border-0;
+        border-radius: $border-radius !important;
+
+        button {
+            @extend .pt-0;
+            @extend .pl-0;
+            @extend .pb-2;
+            @extend .text-decoration-none;
+            width: 100%;
+            text-align: left;
+            padding-right: 90px;
+            @include media-breakpoint-up(lg) {
+                @include font-size(24);
+                padding: 2rem;
+            }
+
+            &:after {
+                content: " ";
+                @include v-c;
+                background-image: url('/images/icons/icon-chevron-grey.svg');
+                background-repeat: no-repeat;
+                background-size: 100%;
+                transition: $transition;
+                transform: translate3d(0, -50%, 0) ;
+                right: 0;
+                width: 20px;
+                height: 10px;
+
+                @include media-breakpoint-up(lg) {
+                }
+            }
+
+            &.collapsed:after {
+                transform: translate3d(0, -50%, 0) rotate3d(0, 0, 1, -180deg);
+            }
+        }
+    }
+
+    .card-body {
+        @extend .p-0;
+        @extend .pb-2;
+    }
+}
+
+.accordion {
+    width: 100%;
+
+    .card {
+        border-radius: $border-radius !important;
+        @extend .w-100;
+        //@extend .shadow;
+        @extend .border-top-0;
+        @extend .border-right-0;
+        @extend .border-left-0;
+        @extend .border-bottom;
         @extend .mb-2;
         @extend .bg-white;
         @include media-breakpoint-up(lg) {
