--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -1,6 +1,10 @@
 // Bootstrap modal
-
 .modal {
+    .modal-dialog {
+        margin-left: auto !important;
+        margin-right: auto !important;
+    }
+
     .modal-content {
         border-radius: $border-radius;
     }
