--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -86,7 +86,7 @@
         padding: 9px;
 
         &:hover {
-            background-color: $fontGrey;
+            background-color: $textGrey;
             color: $white;
             cursor: pointer;
             width: 100%;
@@ -139,7 +139,7 @@
     a {
         @include font-size(14);
         font-weight: 400;
-        color: $darkerGrey;
+        color: $textGrey;
     }
 }
 
