--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -468,7 +468,7 @@
 }
 
 .btn-link {
-    color: $darkerGrey;
+    color: $textGrey;
     cursor: pointer;
     appearance: none;
     border: none;
