--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -11,7 +11,7 @@
 
     //=======================WHY CHOOSE SECTION=======================
     .why-use-parent {
-        background: $lighterGrey;
+        background: $bgGrey;
 
         .why-use { // container
             p {
