--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -20,7 +20,7 @@ textarea {
     }
 
     //label {
-    //    color: $darkerGrey;
+    //    color: $textGrey;
     //    font-weight: 500;
     //}
 }
@@ -32,10 +32,10 @@ textarea {
 input:not([type="range"]):not([type="submit"]):not([type="checkbox"]),
 select:not([class^="ui-datepicker"]),
 textarea {
-    border: 2px solid $darkestWhite; /*Removes border*/
+    border: 2px solid $border-color; /*Removes border*/
     border-radius: $border-radius;
     appearance: none;
-    //color: $darkerGrey;
+    //color: $textGrey;
     background-color: $white;
     //text-indent: 0.01px; /* Removes default arrow from firefox*/
     //text-overflow: "";  /*Removes default arrow from firefox*/
@@ -60,7 +60,7 @@ select::-ms-expand {
     input:not([type="submit"]) {
         width: 100%;
         @include placeholder {
-            color: $darkerGrey;
+            color: $textGrey;
             opacity: 1; // To fix a bug in firefox
             font-family: 'SofiaPro-Medium', sans-serif;
         }
@@ -82,7 +82,7 @@ select::-ms-expand {
 
     label {
         text-align: left;
-        color: $darkerGrey;
+        color: $textGrey;
         @extend .font-semibold;
         line-height: 19px;
     }
@@ -109,8 +109,8 @@ select::-ms-expand {
             height: 45px;
             line-height: 45px;
             border-radius: 0 $border-radius $border-radius 0;
-            border: 2px solid $darkestWhite;
-            background-color: $darkestWhite;
+            border: 2px solid $border-color;
+            background-color: $border-color;
             pointer-events: none;
         }
     }
@@ -193,7 +193,7 @@ select::-ms-expand {
             width: 20px;
             height: 20px;
             border-radius: 5px;
-            border: 2px solid $darkestWhite;
+            border: 2px solid $border-color;
             flex: 0 0 20px;
             margin-right: 11px;
             text-align: center;
@@ -220,7 +220,6 @@ select::-ms-expand {
 textarea {
     width: 100%;
     border-radius: $border-radius;
-    //border: 2px solid $darkestWhite;
     background-color: #ffffff;
     padding: 1rem;
     padding-top: 7px;
