--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -138,7 +138,7 @@
 
 .submenu {
     position: absolute;
-    background: $darkerAqua;
+    background: $turq;
     width: 200px;
     //display:none;
     opacity: 0;
