modal-open issue fixed

--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -1,5 +1,7 @@
 // Bootstrap modal
 .modal {
+    overflow: scroll;
+
     .modal-dialog {
         //margin-left: auto !important;
         //margin-right: auto !important;
