--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -559,10 +559,13 @@
 /********* Mobile results layout *************************************************************************************/
 .results-page-mobile {
     // CLear the solutions bar
-    .modal-backdrop {
-        top: auto;
-        bottom: 50px;
-        height: calc(100vh - 50px);
+
+    &:not(.shortlist-open) {
+        .modal-backdrop {
+            top: auto;
+            bottom: 50px;
+            height: calc(100vh - 50px);
+        }
     }
 
     background-color: $bgGrey;
