--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -141,28 +141,13 @@
         .modal-content {
             border-radius: 0;
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.38);
-            padding-bottom: 60px !important;
         }
 
         #slide_number {
-            position: absolute;
-            left: -55px;
-            top: -55px;
             background-color: #fff;
-            border-radius: 50%;
             text-align: center;
-            font-size: 45px;
             @extend .SofiaPro-SemiBold;
-            width: 77px;
-            height: 77px;
-            box-shadow: inset 0px 0px 0px 5px $turq;
-            //line-height: 77px;
             @include flex-center;
-            z-index: 5;
-
-            span {
-                margin-bottom: 3px;
-            }
         }
 
         .carousel-inner {
@@ -180,8 +165,8 @@
         }
 
         .carousel-controls {
-            width: 100%;
-            height: 60px;
+            bottom: 16px;
+            //height: 60px;
             display: flex;
             justify-content: center;
             align-items: center;
