--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -165,14 +165,8 @@
         }
 
         .carousel-controls {
-            bottom: 16px;
-            //height: 60px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            > * {
-            }
+            left: 0;
+            bottom: 1rem;
 
             .carousel-indicators {
                 position: static;
@@ -196,9 +190,8 @@
         }
 
         .carousel-item-copy {
-            padding: 15px 25px 15px 125px;
-            @include font-size(13);
-
+            padding-bottom: 100px;
+            @include font-size(12);
         }
     }
 }
