Row spacing on the carousel buttons.

--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -168,6 +168,10 @@
             left: 0;
             bottom: 1rem;
 
+            .row {
+                @include reset-row-spacing(8px);
+            }
+
             .carousel-indicators {
                 position: static;
 
