item alignment on tablet

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -265,9 +265,8 @@
     }
 
     .result-item {
-        margin-top: 7px;
-
-        &:not(:first-child) {
+        @include media-breakpoint-up(xl){
+            margin-top: 7px;
         }
     }
 
