Max width on special offer modal

--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -232,4 +232,8 @@
 #hc_modal_mobile_special_offer_tab {
     bottom: 50px;
     top: auto;
+
+    .modal-dialog {
+        max-width: initial;
+    }
 }
