--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -34,21 +34,22 @@
     &.big {
         // Button added by BS select
         .dropdown-toggle {
-            padding: 16px 60px 16px 50px;
+            padding: 16px 60px 16px 16px;
+            //padding: 16px 60px 16px 50px;
             width: 100%;
             //border-radius: 10px;
             color: $textGrey;
-            @include font-size(18);
+            @include font-size(16);
             @extend .SofiaPro-Medium;
             border: 2px solid $border-color;
 
-            &:before {
-                content: '';
-                background-image: url('/images/icons/icon-choose-treatment.svg');
-                @include icon-bg-center(100%, 20px, 20px);
-                @include v-c;
-                left: 20px;
-            }
+            //&:before {
+            //    content: '';
+            //    background-image: url('/images/icons/icon-choose-treatment.svg');
+            //    @include icon-bg-center(100%, 20px, 20px);
+            //    @include v-c;
+            //    left: 20px;
+            //}
         }
     }
 
